# rustwasm-prime

./: .gitignore  Cargo.toml  LICENSE.md  README.md  package.json  rustfmt.toml  tsconfig.json  webpack.config.js
src/: index.html  index.ts  style.css  worker.ts
src/wasm/: evaluation.rs  lib.rs  lucas.rs  miller_rabin.rs
