[package]
name = "rustwasm-prime"
description = "Online prime number checker"
authors = ["Wataru Inariba <oinari17@gmail.com>"]
version = "0.1.0"
license = "MIT"
repository = "https://github.com/b-inary/rustwasm-prime"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
num-bigint = "0.2"
num-traits = "0.2"
num-integer = "0.1"

[lib]
crate-type = ["cdylib"]
path = "./src/wasm/lib.rs"

[profile.release]
lto = true
